# naiad

./: .gitignore  JUSTFILE  README.md  pyproject.toml
cpp/: Makefile  README.md  main.cpp  sfml-app
py/: README.md  funcsim.py  pyproject.toml
py/naiad/: funcsim.py
py/tests/: test_funcsim.py
