[tool.poetry]
name = "naiad"
version = "0.1.0"
description = ""
authors = ["Will Turner <rwturner17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.7.1"
numpy = "^1.25.0"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pyright = "^1.1.314"
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
